# iiHtmlBlock

./: AGENTS.md  CMakeLists.txt  README.md  iiHtmlBlock  iiHtmlBlock.cpp  iiHtmlBlock.h  install.sh
Docs/: block_html_serializer.md  block_range_tracker.md  combine_block.md  delete_block.md  divide_block.md  examples.md  flatten_block.md  get_html.md  get_tag_info.md  iixml_to_html.md  install.md
Example/: ParsedXmlHtmlExample.cpp
Src/Modifier/: BlockHTMLSerializer.cpp  BlockHTMLSerializer.h  BlockRangeTracker.cpp  BlockRangeTracker.h  CombineBlock.cpp  CombineBlock.h  DeleteBlock.cpp  DeleteBlock.h  DivideBlock.cpp  DivideBlock.h  FlattenBlock.cpp  FlattenBlock.h  iiXmlToHTML.cpp  iiXmlToHTML.h
Src/Parser/: GetHTML.cpp  GetHTML.h  GetTagInfo.cpp  GetTagInfo.h
Test/: BlockHTMLSerializer_test.cpp  BlockRangeTracker_test.cpp  CombineBlock_test.cpp  DeleteBlock_test.cpp  DivideBlock_test.cpp  FlattenBlock_test.cpp  GetHTML_test.cpp  GetTagInfo_test.cpp  iiXmlToHTML_test.cpp  install_layout_test.cpp  umbrella_header_test.cpp
cmake/: iiHtmlBlockConfig.cmake.in
